[package]
name = "ggj2021"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
bevy = "0.4"
bevy-inspector-egui = "0.3"
bevy_discovery = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clone-block = "0.1"
derive_less = "0.2"
derive_more = "0.99"
dirmod = "0.1"
extend = "0.3"
itertools = "0.10"
once_cell = "1"
parking_lot = "0.11"
paste = "1"
rand = { version = "0.7" }
regex = "1"
# reqwest = { version = "0.11", features = ["gzip", "brotli", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shrinkwraprs = "0.3"
smart-default = "0.6"
strum = { version = "0.20", features = ["derive"] }
sugars = "3"
toml = "0.5"
typed-builder = "0.8"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
